adjusted nav bar on the home

--- a/assets/style.css
+++ b/assets/style.css
@@ -9,20 +9,10 @@ html,body,header,nav,a,img,ul,li,main,section{
   vertical-align: baseline;
 }
 
-h1{
-    font-size: 3.5em;
-    color: white;
-    padding-bottom: 5%;
-    border-bottom:3px solid white;
-    font-family:'Marcellus';
-}
-p.giPara{
-    font-size: 1em;
-    color: white;
-    font-family: 'Marcellus';
-}
+/* NAV BAR STYLE */
+
 #header {
-    /* transition: background-color 0.2s ease-in-out; */
+
     background-color: white;
     height: 3em;
     left: 0;
@@ -31,7 +21,6 @@ p.giPara{
     position: fixed;
     top: 0;
     width: 100%;
-    /* z-index: 10000; */
     margin-bottom: 5%;
     text-decoration:none ;
       color: rgba(127	38	167	) ;
@@ -56,6 +45,22 @@ p.giPara{
       color: white;
       text-decoration: none;
   }
+  /* NAV BAR STYLE */
+
+  
+  /* JOSH'S PAGE START */
+  h1{
+    font-size: 3.5em;
+    color: white;
+    padding-bottom: 5%;
+    border-bottom:3px solid white;
+    font-family:'Marcellus';
+}
+p.giPara{
+    font-size: 1em;
+    color: white;
+    font-family: 'Marcellus';
+}
 #giWrapper{
     background: url(https://i.postimg.cc/bv3Xr2Gh/cover.png);
     height: 75vh;
@@ -103,3 +108,4 @@ div>.otherTwo h2{
     padding: 5px;
 } 
 
+/* JOSH PAGE ENDING */
