--- a/assets/style.css
+++ b/assets/style.css
@@ -47,7 +47,101 @@ html,body,header,nav,a,img,ul,li,main,section{
   }
   /* NAV BAR STYLE */
 
-  
+  /* **************************
+        HOME   
+************************** */
+
+.home {
+    background-color: #f9f9f9;
+}
+
+.titleHero {
+    font-size: 75px;
+    margin-bottom: 32px;
+}
+
+.pHero {
+    font-size: 19px;
+    line-height: 1.6;
+    margin-bottom: 48px;
+    font-style: oblique;
+}
+
+.headerContainer {
+    height: 75vh;
+    position: relative;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.297), rgba(0, 0, 0, 0.27)), url(Images/heroImage.png);
+    background-size: cover;
+    margin: 4em 4em;
+    border-radius: 30px;
+    box-shadow: 0px 10px 10px #251b26;
+}
+
+.mainContainer {
+    width: 1200px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.mainContainer img {
+    width: 650px;
+    height: auto;
+    ;
+}
+
+.aboutUsHome {
+    padding: 96px 50px;
+    background-color: #eaeaea;
+    margin: 10em 4em;
+    border-radius: 30px;
+    box-shadow: 0px 10px 10px #251b26;
+}
+
+.aboutUsHome h2 {
+    font-size: 42px;
+    margin-bottom: 48px;
+}
+
+.resourcesHome {
+    padding: 96px 50px;
+    background-color: #eaeaea;
+    margin: 10em 4em;
+    border-radius: 30px;
+    box-shadow: 0px 10px 10px #251b26;
+}
+
+.resourcesItems {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    padding-top: 40px;
+}
+
+.rLinks {
+    background-color: #f5f5f5d0;
+    border-radius: 20px;
+    padding: 5px 20px 5px 20px;
+    box-shadow: 0px 10px 10px #5b5262;
+    align-self: center;
+    justify-self: center;
+    height: 600px;
+    width: auto;
+}
+
+.rLinks h2 {
+    font-size: 42px;
+    margin-bottom: 48px;
+}
+
+.rLinks img {
+    margin-bottom: 75px;
+    max-width: 350px;
+    height: 250px;
+    border-radius: 20px;
+}
   /* JOSH'S PAGE START */
   h1{
     font-size: 3.5em;
