--- a/assets/style.css
+++ b/assets/style.css
@@ -87,7 +87,7 @@ a.donateButton {
     background-image: linear-gradient(rgba(0, 0, 0, 0.297), rgba(0, 0, 0, 0.27)), url(../Images/heroImage.png);
     background-size: cover;
     margin: 4em 4em;
-    border-radius: 30px;
+    /* border-radius: 30px; */
     box-shadow: 0px 10px 10px #251b26;
 }
 
@@ -110,8 +110,8 @@ a.donateButton {
     padding: 96px 50px;
     background: rgb(74,36,129);
     background: linear-gradient(180deg, rgba(74,36,129,1) 0%, rgba(170,73,199,1) 59%, rgba(255,255,255,1) 100%);  
-    margin: 10em 4em;
-    border-radius: 30px;
+    margin: 4em 4em;
+    /* border-radius: 30px; */
     box-shadow: 0px 10px 10px #251b26;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -135,39 +135,39 @@ a.donateButton {
 .resourcesHome {
     padding: 96px 50px;
     background-color: #eaeaea;
-    margin: 10em 4em;
-    border-radius: 30px;
+    margin: 4em 4em;
+    /* border-radius: 30px; */
     box-shadow: 0px 10px 10px #251b26;
 }
 
 .resourcesItems {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
+    gap: 8px;
     padding-top: 40px;
 }
 
 .rLinks {
     background-color: #f5f5f5d0;
-    border-radius: 20px;
+    /* border-radius: 20px; */
     padding: 5px 20px 5px 20px;
     box-shadow: 0px 10px 10px #5b5262;
     align-self: center;
     justify-self: center;
-    height: 600px;
+    height: 700px;
     width: auto;
 }
 
 .rLinks h2 {
     font-size: 42px;
-    margin-bottom: 48px;
+    margin-bottom: 20px;
 }
 
 .rLinks img {
-    margin-bottom: 75px;
+    margin-bottom: 15px;
     max-width: 350px;
     height: 250px;
-    border-radius: 20px;
+    /* border-radius: 20px; */
 }
 
 /* JOSH'S PAGE START */
@@ -410,15 +410,15 @@ div>.otherTwo h2 {
 
 #footer {
 
-    background-color: rgba(127	38	167	);
-    height: 5em;
+    background-color:rgba(127	38	167	);
+    height: 10em;
     left: 0;
-    line-height: 1.5em;
-    padding: 0 1.25em;
+    line-height: 1em;
     
     top: 0;
     width: 100%;
-    margin-bottom: 5%;
+    
+    text-decoration:none ;
     
   }
 
@@ -433,11 +433,18 @@ div>.otherTwo h2 {
       list-style: none;
       margin: 10px 0;
   }
-  .navBar>ul *{
+  .footerNavBar>ul *{
     text-decoration: none;
     font-family: 'Marcellus';
-    
-    color: rgba(127	38	167	);
+    margin: 5px 10px;
+    color: white;
+    clear: both;
+  }
+  #footer li.footerSocials{
+    /* display: flex;
+    justify-content: flex-end;
+    flex-direction: column; */
+    /* text-align: right;
   }
   a.contactButton, a.donateButton{
       background-color: rgba(127	38	167	);
@@ -445,6 +452,6 @@ div>.otherTwo h2 {
       padding: 5px;
       color: white;
       text-decoration: none;
-  } */
+  }  */
 
 
