--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Eagle+Lake&family=Marcellus&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Eagle+Lake&family=Marcellus&display=swap");
 
 html,
 body,
@@ -9,57 +9,53 @@ img,
 ul,
 li,
 main,
-section {
-    margin: 0;
+section,
+footer {
+  margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-  font-family: 'Marcellus';
-
+  font-family: "Marcellus";
 }
 
 /* NAV BAR STYLE */
 
 #header {
-    background-color: white;
-    height: 3em;
-    left: 0;
-    line-height: 1.5em;
-    padding: 0 1.25em;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    margin-bottom: 5%;
-    text-decoration: none;
-    color: rgba(127 38 167);
+  background-color: white;
+  height: 3em;
+  left: 0;
+  line-height: 1.5em;
+  padding: 0 1.25em;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  margin-bottom: 5%;
+  text-decoration: none;
+  color: rgba(127 38 167);
 }
-
-.navBar>* {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    list-style: none;
-    margin: 10px 0;
+.navBar > * {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  list-style: none;
+  margin: 10px 0;
 }
+.navBar > ul * {
+  text-decoration: none;
+  font-family: "Marcellus";
 
-.navBar>ul * {
-    text-decoration: none;
-    font-family: 'Marcellus';
-
-    color: rgba(127 38 167);
+  color: rgba(127 38 167);
 }
-
 a.contactButton,
 a.donateButton {
-    background-color: rgba(127 38 167);
-    border-radius: 3px;
-    padding: 5px;
-    color: white;
-    text-decoration: none;
+  background-color: rgba(127 38 167);
+  border-radius: 3px;
+  padding: 5px;
+  color: white;
+  text-decoration: none;
 }
-
 /* NAV BAR STYLE */
 
 /* **************************
@@ -67,391 +63,202 @@ a.donateButton {
 ************************** */
 
 .home {
-    background-color: #f9f9f9;
+  background-color: #f9f9f9;
 }
 
 .titleHero {
-    font-size: 75px;
-    margin-bottom: 32px;
+  font-size: 75px;
+  margin-bottom: 32px;
 }
 
 .pHero {
-    font-size: 19px;
-    line-height: 1.6;
-    margin-bottom: 48px;
-    font-style: oblique;
+  font-size: 19px;
+  line-height: 1.6;
+  margin-bottom: 48px;
+  font-style: oblique;
 }
 
 .headerContainer {
-    height: 75vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.297), rgba(0, 0, 0, 0.27)), url(../Images/heroImage.png);
-    background-size: cover;
-    margin: 4em 4em;
-    /* border-radius: 30px; */
-    box-shadow: 0px 10px 10px #251b26;
+  height: 75vh;
+  /* position: relative; */
+  background: url(../images/heroImage.png);
+  background-size: cover;
+  margin: 4em 4em;
+  /* border-radius: 30px; */
+  box-shadow: 0px 10px 10px #251b26;
 }
 
 .mainContainer {
-    width: 1200px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+  width: 1200px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .mainContainer img {
-    width: 650px;
-    height: auto;
-    ;
+  width: 650px;
+  height: auto;
 }
 
 .aboutUsHome {
-    padding: 96px 50px;
-    background: rgb(74,36,129);
-    background: linear-gradient(180deg, rgba(74,36,129,1) 0%, rgba(170,73,199,1) 59%, rgba(255,255,255,1) 100%);  
-    margin: 4em 4em;
-    /* border-radius: 30px; */
-    box-shadow: 0px 10px 10px #251b26;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.aboutUsHome img {
-    max-width: 400px;
-    height: auto;
-    border-radius: 20px;
+  padding: 96px 50px;
+  background: rgb(74, 36, 129);
+  background: linear-gradient(
+    180deg,
+    rgba(74, 36, 129, 1) 0%,
+    rgba(170, 73, 199, 1) 59%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  margin: 4em 4em;
+  /* border-radius: 30px; */
+  box-shadow: 0px 10px 10px #251b26;
 }
 
 .aboutUsHome h2 {
-    font-size: 42px;
-}
-
-.aboutUsHome p {
-    max-width: 450px;
-    height: auto;
+  font-size: 42px;
+  margin-bottom: 48px;
 }
 
 .resourcesHome {
-    padding: 96px 50px;
-    background-color: #eaeaea;
-    margin: 4em 4em;
-    /* border-radius: 30px; */
-    box-shadow: 0px 10px 10px #251b26;
+  padding: 96px 50px;
+  background-color: #eaeaea;
+  margin: 4em 4em;
+  /* border-radius: 30px; */
+  box-shadow: 0px 10px 10px #251b26;
 }
 
 .resourcesItems {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 8px;
-    padding-top: 40px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 8px;
+  padding-top: 40px;
 }
 
 .rLinks {
-    background-color: #f5f5f5d0;
-    /* border-radius: 20px; */
-    padding: 5px 20px 5px 20px;
-    box-shadow: 0px 10px 10px #5b5262;
-    align-self: center;
-    justify-self: center;
-    height: 700px;
-    width: auto;
+  background-color: #f5f5f5d0;
+  /* border-radius: 20px; */
+  padding: 5px 20px 5px 20px;
+  box-shadow: 0px 10px 10px #5b5262;
+  align-self: center;
+  justify-self: center;
+  height: 700px;
+  width: auto;
 }
 
 .rLinks h2 {
-    font-size: 42px;
-    margin-bottom: 20px;
+  font-size: 42px;
+  margin-bottom: 20px;
 }
 
 .rLinks img {
-    margin-bottom: 15px;
-    max-width: 350px;
-    height: 250px;
-    /* border-radius: 20px; */
+  margin-bottom: 15px;
+  max-width: 350px;
+  height: 250px;
+  /* border-radius: 20px; */
 }
-
 /* JOSH'S PAGE START */
 h1 {
-    font-size: 3.5em;
-    color: white;
-    padding-bottom: 5%;
-    border-bottom: 3px solid white;
-    font-family: 'Marcellus';
+  font-size: 3.5em;
+  color: white;
+  padding-bottom: 5%;
+  border-bottom: 3px solid white;
+  font-family: "Marcellus";
 }
-
-p.giPara{
-    font-size: 1em;
-    color: white;
-    font-family: 'Marcellus';
+p.giPara {
+  font-size: 1em;
+  color: white;
+  font-family: "Marcellus";
 }
-
 #giWrapper {
-    background: url(https://i.postimg.cc/bv3Xr2Gh/cover.png);
-    height: 75vh;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: static;
-
+  background: url(https://i.postimg.cc/bv3Xr2Gh/cover.png);
+  height: 75vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: static;
 }
-
 .mainSection {
-    margin: 7% 7%;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-
+  margin: 7% 7%;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
 }
-
 .wrapper {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    font-family: 'Marcellus';
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  font-family: "Marcellus";
 }
-
-.wrapper>section h2 {
-    border-bottom: 2px solid white;
-    padding-bottom: 5px;
+.wrapper > section h2 {
+  border-bottom: 2px solid white;
+  padding-bottom: 5px;
 }
-
-div>section {
-    padding: 5%;
+div > section {
+  padding: 5%;
 }
-
 .middleSection {
-    background: rgb(74, 36, 129);
-    background: linear-gradient(180deg, rgba(74, 36, 129, 1) 0%, rgba(170, 73, 199, 1) 59%, rgba(255, 255, 255, 1) 100%);
-    color: white;
+  background: rgb(74, 36, 129);
+  background: linear-gradient(
+    180deg,
+    rgba(74, 36, 129, 1) 0%,
+    rgba(170, 73, 199, 1) 59%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  color: white;
 }
 
 .otherTwo {
-    color: rgba(127 38 167);
+  color: rgba(127 38 167);
 }
-
-div>.otherTwo h2 {
-    border-bottom: 2px solid rgba(127 38 167);
-    padding-bottom: 5px;
+div > .otherTwo h2 {
+  border-bottom: 2px solid rgba(127 38 167);
+  padding-bottom: 5px;
 }
 
 .sectionImg {
-    padding: 5px;
+  padding: 5px;
 }
 
 /* JOSH PAGE ENDING */
-
-
-/* 
-*****************************
-        FOOTER 
-***************************** 
-*/
-
-
-.footerContainer {
-    background-color: #6818a5;
-    color: rgb(255, 255, 255);
-    padding-top: 20px;
-}
-
-.footerContent {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-}
-
-.footerContent h3 {
-    font-size: 25px;
-    font-weight: bold;
-    text-transform: capitalize;
-    line-height: 3rem;
-    margin-bottom: 15px;
-}
-
-.footerContent p {
-    max-width: 500px;
-    margin: 10px auto;
-    line-height: 28px;
-    font-size: 14px;
-}
-
-.footerContent img {
-    width: 100px;
-    height: auto;
-}
-
-.socialLinks {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 1rem 0 1rem 0;
-}
-
-
-.socialLinks li {
-    margin: 0 10px;
-}
-
-.socialLinks a {
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-
-}
-
-.socialLinks a i {
-    font-size: 30px;
-}
-
-.btmFooter {
-    background-color: #220135;
-    width: 100%;
-    padding: 20px 0;
-    text-align: center;
-}
-
-.btmFooter p {
-    font-family: 'Marcellus';
-    font-size: 12px;
-    text-transform: capitalize;
-}
-
-/* JOSH PAGE ENDING */
-
-
-
-/* MICAH PAGE START (AWARENESS) */
-.awarenessH1 {
-    color: black;
-    display: flex;
-    justify-content: center;
-}
-
-.sectionP1 {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-}
-
-/* banner styling */
-.section-m1 {
-    margin: 40px 0;
-}
-
-#banner {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background-image: url(../Images/example.png);
-    width: 100%;
-    height: 30vh;
-    background-size: cover;
-    background-position: center;
-}
-
-#banner h4 {
-    color: white;
-    font-size: 20px;
-}
-
-#banner h2 {
-    color: white;
-    font-size: 16px;
-}
-
-#banner button {
-    font-size: 14px;
-    font-weight: 600;
-    padding: 15px 30px;
-    color: black;
-    background-color: white;
-    border-radius: 4px;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    transition: 0.2s;
-}
-
-#banner button:hover {
-    background-color: red;
-    color: white;
-}
-
-/* section styling */
-.antihumanContainer {
-    text-align: center;
-}
-
-.antihumanContainer .antihumanDivContainer {
-    display: flex;
-    justify-content: space-evenly;
-    padding-top: 20px;
-    flex-wrap: wrap;
-}
-
-.antihumanContainer .antihumanBox {
-    width: 13%;
-    min-width: 250px;
-    padding: 10px 20px;
-    border: 1px solid black;
-    border-radius: 25px;
-    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
-    margin: 15px;
-    transition: 0.2s ease ;
-}
-
-
-
-/* MICAH PAGE ENDING */
 
 #footer {
+  background-color: rgba(127 38 167);
+  height: 10em;
+  left: 0;
+  line-height: 1em;
 
-    background-color:rgba(127	38	167	);
-    height: 10em;
-    left: 0;
-    line-height: 1em;
-    
-    top: 0;
-    width: 100%;
-    
-    text-decoration:none ;
-    
-  }
+  top: 0;
+  width: 100%;
 
-/*   #footer>*{
-      display: flex;
-      justify-content: space-evenly;
-  } */
-  /* .navBar>*{
-      display: flex;
-      justify-content: space-around;
-      flex-direction: row;
-      list-style: none;
-      margin: 10px 0;
-  }
-  .footerNavBar>ul *{
-    text-decoration: none;
-    font-family: 'Marcellus';
-    margin: 5px 10px;
-    color: white;
-    clear: both;
-  }
-  #footer li.footerSocials{
-    /* display: flex;
+  text-decoration: none;
+}
+.footerNavBar > * {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  list-style: none;
+  margin: 10px 0;
+}
+.footerNavBar > ul * {
+  text-decoration: none;
+  font-family: "Marcellus";
+  margin: 5px 10px;
+  color: white;
+  clear: both;
+}
+#footer li.footerSocials {
+  /* display: flex;
     justify-content: flex-end;
     flex-direction: column; */
-    /* text-align: right;
-  }
-  a.contactButton, a.donateButton{
-      background-color: rgba(127	38	167	);
-      border-radius: 3px;
-      padding: 5px;
-      color: white;
-      text-decoration: none;
-  }  */
-
-
+  text-align: right;
+}
+a.contactButton,
+a.donateButton {
+  background-color: rgba(127 38 167);
+  border-radius: 3px;
+  padding: 5px;
+  color: white;
+  text-decoration: none;
+}
