--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,29 @@
 @import url("https://fonts.googleapis.com/css2?family=Eagle+Lake&family=Marcellus&display=swap");
 
+html,
+body,
+header,
+nav,
+a,
+img,
+ul,
+li,
+main,
+section,
+footer {
+
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+    font-family: "Marcellus";
+
+}
+
+/* NAV BAR STYLE */
+
 #header {
 
     background-color: white;
@@ -38,26 +62,18 @@ a.donateButton {
     padding: 5px;
     color: white;
     text-decoration: none;
-    font-family: 'Marcellus';
-    
-    color: rgba(127	38	167	);
-  }
-  a.contactButton, a.donateButton{
-      background-color: rgba(127	38	167	);
-      border-radius: 3px;
-      padding: 5px;
-      color: white;
-      text-decoration: none;
-  }
+}
 
-  body{
-   font-family: 'Marcellus';
-  }
+/* NAV BAR STYLE */
+
+/* **************************
+        HOME   BY ABRAHAM
+************************** */
 
 
 .home {
     background-image: linear-gradient(to bottom, #ffffff, #e7c6ff);
-    
+  
 }
 
 .headerContainer {
@@ -191,47 +207,88 @@ a.donateButton {
 /* JOSH'S PAGE START */
 h1 {
     font-size: 3.5em;
-}
-  .titleContact {
-    background: rgb(74, 36, 129);
-  background: linear-gradient(
-    180deg,
-    rgba(74, 36, 129, 1) 0%,
-    rgba(170, 73, 199, 1) 59%,
-    rgba(255, 255, 255, 1) 100%
-  );
-    border: solid ;
-    border-width: .175rem;
     color: white;
-    height: 20rem;
-  }
-  .titleContact h1{
-    text-align: center;
-  }
+  
+    font-family: "Marcellus";
 
-  .titleContact p{
-    font-size: 1.25rem;
-    text-align: center;
-  }
+}
+
+p.giPara {
+    font-size: 1em;
+    color: white;
+    font-family: "Marcellus";
+}
+
+#giWrapper {
+    background: url(https://i.postimg.cc/bv3Xr2Gh/cover.png);
+    height: 75vh;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: static;
+}
+
+.mainSection {
+
+    margin: 7% 7%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    font-family: "Marcellus";
+}
+
+.wrapper>section h2 {
+    border-bottom: 2px solid white;
+    padding-bottom: 5px;
+}
+
+div>section {
+    padding: 5%;
+}
+
+.middleSection {
+    background: rgb(74, 36, 129);
+    background: linear-gradient(180deg,
+            rgba(74, 36, 129, 1) 0%,
+            rgba(170, 73, 199, 1) 59%,
+            rgba(255, 255, 255, 1) 100%);
+    color: white;
+}
+
+.otherTwo {
+    color: rgba(127 38 167);
+}
+
+div>.otherTwo h2 {
+    border-bottom: 2px solid rgba(127 38 167);
+    padding-bottom: 5px;
+}
+
+.sectionImg {
+    padding: 5px;
+}
+
+/* JOSH PAGE ENDING */
 
 
-  .bodyContact{
-      position: relative;
-      font-size: 1.5rem;
-      margin-top: 2.75rem;
-      margin-bottom: 1rem;
-      box-sizing: border-box;
-      width: 100%;
-      color: rgba(127	38	167	);
-  }
 
-  section.container >form *{
-      display: flex;
-      flex-direction: column;
+/* Indy Start */
 
-  }
 
-  input, select, textarea{
+.bodyContact {
+    position: relative;
+    font-size: 1.5rem;
+    padding: .8rem 1.25rem;
+    margin-top: 2.75rem;
+    margin-bottom: 1rem;
+    box-sizing: border-box;
     width: 100%;
     color: rgba(127 38 167);
 }
@@ -267,17 +324,36 @@ input[type=submit] {
     font-size: 1.5rem;
 }
 
-  /* footer ul>li {
-      list-style: none;
-      display: inline-block;
-      flex-direction: row;
-  } */
 
-  .footerContainer {
-    background-color: #6D1D76;
-    color: #FFFFFF;
+/* Indy Ending */
+
+
+a.contactButton,
+a.donateButton {
+    background-color: rgba(127 38 167);
+    border-radius: 3px;
+    padding: 5px;
+    color: white;
+    text-decoration: none;
+}
+
+
+
+/* *********************
+        FOOTER 
+ **********************/
+/*BY INDIA AND ABRAHAM */
+
+
+.footerContainer {
+    background: linear-gradient(to bottom,
+            rgb(170, 73, 199, 1) 2%,
+            rgb(74, 36, 129, 1) 54%,
+            rgb(23, 10, 39));
+    color: #ffffff;
     padding-top: 20px;
 }
+
 .footerContent {
     display: flex;
     align-items: center;
@@ -285,10 +361,12 @@ input[type=submit] {
     flex-direction: column;
     text-align: center;
 }
+
 .footerContent img {
     max-width: 5em;
     height: auto;
 }
+
 .footerContent h3 {
     font-size: 25px;
     font-weight: bold;
@@ -296,37 +374,34 @@ input[type=submit] {
     line-height: 3rem;
     margin-bottom: 15px;
 }
+
 .footerContent p {
     max-width: 500px;
     margin: 10px auto;
     line-height: 28px;
     font-size: 14px;
 }
+
 .socialLinks {
     list-style: none;
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 1rem 0 1rem 0;
+    font-size: 12px;
 }
+
+
 .socialLinks li {
     margin: 0 10px;
 }
+
 .socialLinks a {
     text-decoration: none;
-    color: #FFFFFF;
+    color: #ffffff;
+
 }
+
 .socialLinks a i {
     font-size: 30px;
 }
-.btmFooter {
-    background-color: #211312;
-    width: 100%;
-    padding: 20px 0;
-    text-align: center;
-}
-.btmFooter p {
-    font-size: 12px;
-    text-transform: capitalize;
-}
- 
