--- a/assets/style.css
+++ b/assets/style.css
@@ -112,7 +112,7 @@ textarea {
 
     width: 100%;
     padding: 12px;
-    border: .375rem solid rgba(127 38 167);
+    border: .175rem solid rgba(127 38 167);
     border-radius: 4px;
     box-sizing: border-box;
     margin-top: 6px;
@@ -121,14 +121,25 @@ textarea {
 }
 
 input[type=submit] {
-    background-color: white;
-    color: rgba(127 38 167);
+    background-color: rgba(127 38 167);
+    color:white;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 1.5rem;
 }
+
+.contactButton1 {
+    background-color: rgba(127	38	167	);
+    border-radius: 3px;
+    padding: 5px;
+    color: white;
+    text-decoration: none;
+    margin: 10px 10px;
+}
+
+
 
   /* footer ul>li {
       list-style: none;
@@ -137,8 +148,8 @@ input[type=submit] {
   } */
 
   .footerContainer {
-    background-color: #6D1D76;
-    color: #FFFFFF;
+    background: #7F26A7;
+    color: #7F26A7;
     padding-top: 20px;
 }
 .footerContent {
@@ -183,7 +194,7 @@ input[type=submit] {
     font-size: 30px;
 }
 .btmFooter {
-    background-color: #211312;
+    background-color:#ffff ;
     width: 100%;
     padding: 20px 0;
     text-align: center;
