--- a/assets/style.css
+++ b/assets/style.css
@@ -370,7 +370,7 @@ main>section.aboutUsHomeAW{
 }
 .aboutUsHomeAW p{
     text-align: center;
-    color: black;
+    color: #7f26a7;
     padding: 0em 10em;
     
   
